<resources>
    <string name="_1layer_color">1layer Color</string>
    <string name="_1layer_scale">1layer Scale</string>
    <string name="_2layer_color">2layer Color</string>
    <string name="_2layer_scale">2layer Scale</string>
    <string name="_3layer_color">3layer Color</string>
    <string name="_3layer_scale">3layer Scale</string>
    <string name="a">A</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_audio_data_provider">AudioProvider</string>
    <string name="add_blur_effect">BlurEffect</string>
    <string name="add_composition">Composition</string>
    <string name="add_image">Image</string>
    <string name="add_mirror_effect">MirrorEffect</string>
    <string name="add_motion_blur_effect">MotionBlurEffect</string>
    <string name="add_particles">Particles</string>
    <string name="add_rgb_split_effect">RgbSplitEffect</string>
    <string name="add_segment">Bars</string>
    <string name="add_text">Text</string>
    <string name="ads_app_id">ca-app-pub-3759586557634138~9232424607</string>
    <string name="ads_export_banner">ca-app-pub-3759586557634138/4924284739</string>
    <string name="ads_footer_vis_banner_ad_unit_id">ca-app-pub-3759586557634138/9192413215</string>
    <string name="ads_header_banner_ad_unit_id">ca-app-pub-3759586557634138/2654925024</string>
    <string name="ads_interstitial">ca-app-pub-3759586557634138/3471601953</string>
    <string name="ads_reward_audio_bitrate" />
    <string name="ads_reward_end_at" />
    <string name="ads_reward_fps" />
    <string name="ads_reward_height" />
    <string name="ads_reward_logo">ca-app-pub-3759586557634138/6683026645</string>
    <string name="ads_reward_video_bitrate" />
    <string name="ads_reward_width" />
    <string name="alignment_position">Alignment Position</string>
    <string name="alpha_0">0.949</string>
    <string name="alpha_1">0.870</string>
    <string name="alpha_2">0.541</string>
    <string name="alpha_3">0.129</string>
    <string name="alpha_4">0.050</string>
    <string name="anchor_center">center</string>
    <string name="anchor_end">end</string>
    <string name="anchor_start">start</string>
    <string name="anchor_unset">unset</string>
    <string name="anchor_x">Anchor X</string>
    <string name="anchor_y">Anchor Y</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Avee Player</string>
    <string name="app_settings_name">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Appearance</string>
    <string name="audio_capture">Audio Capture</string>
    <string name="audio_duration_ms">Audio Duration Ms</string>
    <string name="audio_eqcustom">Custom</string>
    <string name="audio_equalizer">Equalizer</string>
    <string name="audio_provider_index">Audio Provider Index</string>
    <string name="audio_virtualizer">Virtualizer</string>
    <string name="auto_detect_color_key">Auto Detect Color Key</string>
    <string name="aweight">AWeight</string>
    <string name="b">B</string>
    <string name="bar_height_multiplier">Bar Height Multiplier</string>
    <string name="bar_width">Bar Width</string>
    <string name="bar_width_affected_by_shape">Bar Width Affected By Shape</string>
    <string name="bars">Bars</string>
    <string name="beat">Beat</string>
    <string name="beat_cam_shake_less">BeatCamShakeLess</string>
    <string name="beat_cam_shake_more">BeatCamShakeMore</string>
    <string name="beat_cam_shake_rot_less">BeatCamShakeRotLess</string>
    <string name="beat_cam_shake_rot_more">BeatCamShakeRotMore</string>
    <string name="beat_random_shake">BeatRandomShake</string>
    <string name="beat_range_bar_first">Beat Range Bar First</string>
    <string name="beat_range_bar_last">Beat Range Bar Last</string>
    <string name="beat_range_value_higher">Beat Range Value Higher</string>
    <string name="beat_range_value_lower">Beat Range Value Lower</string>
    <string name="beat_smooth">Beat Smooth</string>
    <string name="beat_trigger_anim">BeatTriggerAnim</string>
    <string name="behavior">Behavior</string>
    <string name="behaviour">Behaviour</string>
    <string name="blend_mode">Blend Mode</string>
    <string name="blend_mode_add">Add</string>
    <string name="blend_mode_content">Blend Mode Content</string>
    <string name="blend_mode_pre_mul_alpha">PreMulAlpha</string>
    <string name="blend_mode_screen">Screen</string>
    <string name="blur">Blur</string>
    <string name="blur_amount_multiplier">Blur Amount Multiplier</string>
    <string name="blur_divider">Blur Divider</string>
    <string name="dialog_navigate_back">Navigate Back</string>
    <string name="directory_downloads">Downloads</string>
    <string name="directory_internal">Internal</string>
    <string name="directory_movies">Movies</string>
    <string name="directory_music">Music</string>
    <string name="directory_sdcard">SD Card</string>
    <string name="do_not_show_again">Do not show this message again</string>
    <string name="legacy_premium_description">"Your success is also our success and we are glad you are reaching your goals with our app!

Starting from 2022, we will be introducing a new pricing strategy and migrating to a subscription model. This will allow us to keep improving the app and developing new content and features

"<font color="#24bcff">"We wish to thank you
for being one of our most amazing users by giving you"</font>"
"<font color="#fed568">PREMIUM 1-year Subscription for free.</font>"

For more info check out HERE

Feel free to reach out at support@aveeplayer.com
and let us know your ideas on how to make this app better.

- Your Avee Music Player Team -
 "</string>
    <string name="legacy_premium_title">Hey, Avee Player <font color="#fed568">Premium</font> User!</string>
    <string name="libItemAction_enqueueAll">Enqueue All</string>
    <string name="libItemAction_playAll">Play All</string>
    <string name="menu_library">Library</string>
    <string name="menu_lock_orientation">Lock Orientation</string>
    <string name="menu_premium">Premium</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sleep_timer">Sleep Timer</string>
    <string name="menu_visualizer">Visualizer</string>
    <string name="menu_viz_chooser">Select Visualizer</string>
    <string name="menu_viz_customize">Edit Visualizer</string>
    <string name="menu_viz_export_video">Export Video</string>
    <string name="pref_alwaysHideAppLogo">Always hide App Logo</string>
    <string name="pref_alwaysHideAppLogo2">Always hide logo at lower corner of screen</string>
    <string name="pref_alwaysQualityEdges">Always use quality edge rendering</string>
    <string name="pref_alwaysQualityEdges2">"Doesn't affect exporting, recommended to keep disabled"</string>
    <string name="pref_appTheme">Color Theme</string>
    <string name="pref_appTheme_default">0</string>
    <string name="pref_audioVisOffset_txt1">Visualizer audio offset Ms (Exo)</string>
    <string name="pref_disableHeaderAds">Disable Ads</string>
    <string name="pref_disableHeaderAds2">"Don't show advertisements"</string>
    <string name="pref_enableNewestFeatures">Enable newest features</string>
    <string name="pref_enableNewestFeatures2">Uncheck if experience issues</string>
    <string name="pref_eula">End-User License Agreement</string>
    <string name="pref_fadePlayPause">Fade audio</string>
    <string name="pref_fadePlayPause2">Fade audio when pause/resume</string>
    <string name="pref_fontsLicenses">Third party fonts</string>
    <string name="pref_highQualityBlur_txt1">High quality blur</string>
    <string name="pref_highQualityBlur_txt2">May greatly reduce visualizer frame rate</string>
    <string name="pref_hold_exit">Back button closes app</string>
    <string name="pref_hold_exit2">Holding Back button will close the app</string>
    <string name="pref_openSourceLicenses">Third party libraries</string>
    <string name="pref_playlistDefaultPath_txt1">Default path for playlist files</string>
    <string name="pref_playlistDefaultPath_txt2">/storage/sdcard0/Playlists/</string>
    <string name="pref_pref_clear_cache">Clear Cache</string>
    <string name="pref_pref_clear_cache2">Clears cached network responses and other cached data</string>
    <string name="pref_resetTips_txt1">Reset Tips</string>
    <string name="pref_resetTips_txt2">Show all tips again</string>
    <string name="pref_reset_txt1">Reset to default</string>
    <string name="pref_reset_txt2">Resets all saved settings</string>
    <string name="pref_resumePlayingAfterAudioFocusGained">Resume when call ends</string>
    <string name="pref_resumePlayingAfterAudioFocusGained2">Resume playing when audio focus regained</string>
    <string name="pref_resumeWhenHeadsetPluggedIn">Headset resume playing</string>
    <string name="pref_resumeWhenHeadsetPluggedIn2">Resume when headset plugged in</string>
    <string name="pref_toolButtonsShowTexts">Tool button texts</string>
    <string name="pref_toolButtonsShowTexts2">Show text under tool buttons</string>
    <string name="pref_visControlsTimeout">Video/Visualizer auto maximize</string>
    <string name="pref_visControlsTimeout2">Auto maximize after period of time</string>
    <string name="preference_cat_behaviour">Behaviour</string>
    <string name="preference_cat_interface">Interface</string>
    <string name="preference_cat_legal">Legal</string>
    <string name="preference_cat_misc">Misc</string>
    <string name="preference_cat_premium">Premium</string>
    <string name="preference_cat_troubleshooting">Troubleshooting</string>
    <string name="toolbar_Sort">Sort</string>
    <string name="toolbar_ViewLayout">View</string>
    <string name="toolbar_showAlbumArtInstead">Show Art</string>
    <string name="toolbar_view_large_list">Large List</string>
    <string name="toolbar_view_medium_list">Medium List</string>
    <string name="toolbar_view_small_list">Small List</string>
</resources>