<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/info_premium_background" android:paddingLeft="40.0dip" android:paddingTop="45.0dip" android:paddingRight="40.0dip" android:paddingBottom="45.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_launcher" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/textSizeM0" android:textStyle="bold" android:textColor="@color/store_2_feature" android:id="@id/title_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/legacy_premium_title" android:layout_marginStart="10.0dip" app:layout_constraintBottom_toBottomOf="@id/image_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/image_view" app:layout_constraintTop_toTopOf="@id/image_view" />
    <TextView android:textColor="@color/gray_3" android:textColorLink="@color/gray_3" android:autoLink="email" android:id="@id/description_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/legacy_premium_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image_view" />
    <CheckBox android:theme="@style/ThemeOverlay.MaterialComponents.Dark" android:id="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonTint="@color/gray_3" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/description_tv" />
    <TextView android:textColor="@color/gray_3" android:id="@id/checkbox_label_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/do_not_show_again" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/checkbox" app:layout_constraintTop_toTopOf="@id/checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>