<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="36.0dip">
        <Button android:textSize="@dimen/textSizeM2" android:id="@id/btnNavigateBack" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="" />
        <ImageButton android:id="@id/btnNavigateBack2" android:background="?android:selectableItemBackground" android:paddingLeft="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_tree_arrow_left_0" android:tint="@color/text_color_m2" android:text="@string/dialog_navigate_back" android:layout_alignLeft="@id/btnNavigateBack" android:layout_alignTop="@id/btnNavigateBack" android:layout_alignBottom="@id/btnNavigateBack" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </RelativeLayout>
    <HorizontalScrollView android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/group3" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip">
                <TextView android:textSize="10.0sp" android:id="@id/txt3" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/directory_internal" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
                <ImageView android:id="@id/btn3" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_folder4" android:scaleType="center" android:tint="@color/black_alpha_1" android:layout_above="@id/txt3" android:layout_centerHorizontal="true" android:color="@color/text_color_m1" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/group4" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip">
                <TextView android:textSize="10.0sp" android:id="@id/txt4" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/directory_sdcard" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
                <ImageView android:id="@id/btn4" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_folder4" android:scaleType="center" android:tint="@color/black_alpha_1" android:layout_above="@id/txt4" android:layout_centerHorizontal="true" android:color="@color/text_color_m1" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/group1" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip">
                <TextView android:textSize="10.0sp" android:id="@id/txt1" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/directory_downloads" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
                <ImageView android:id="@id/btn1" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_folder4" android:scaleType="center" android:tint="@color/black_alpha_1" android:layout_above="@id/txt1" android:layout_centerHorizontal="true" android:color="@color/text_color_m1" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/group2" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip">
                <TextView android:textSize="10.0sp" android:id="@id/txt2" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/directory_movies" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
                <ImageView android:id="@id/btn2" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_folder4" android:scaleType="center" android:tint="@color/black_alpha_1" android:layout_above="@id/txt2" android:layout_centerHorizontal="true" android:color="@color/text_color_m1" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/group5" android:background="?android:selectableItemBackground" android:padding="4.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip">
                <TextView android:textSize="10.0sp" android:id="@id/txt5" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/directory_music" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
                <ImageView android:id="@id/btn5" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_folder4" android:scaleType="center" android:tint="@color/black_alpha_1" android:layout_above="@id/txt5" android:layout_centerHorizontal="true" android:color="@color/text_color_m1" />
            </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>
    <EditText android:textSize="@dimen/textSizeM2" android:textColor="@color/white_alpha_2" android:gravity="center" android:id="@id/txtName" android:background="@color/text_color_m2" android:layout_width="fill_parent" android:layout_height="32.0dip" android:text="" android:inputType="textNoSuggestions" android:textCursorDrawable="@null" />
</LinearLayout>